gccida/g0/do_output_reload
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_output_reload/src/reload1.c:7409:56: error: use of undeclared identifier 'machine_mode'
notea->fld[0].rtwint = ( __int64)gen_lowpart_common( ( machine_mode)*( ( unsigned __int8 *)old + 2), rl->reg_rtx); 
                                                       ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_output_reload/src/obj/reload1.o] Error 1
